# projeto-base

./: .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  manage.py  modulos.md  pyproject.toml  ruff.toml
